--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
+    <ul>
+        <li>A great <a href="recipes/pizza.html">Pizza</a></li>
+        <li>A yummy <a href="recipes/falafel.html">Fallafel</a></li>
+    </ul>
 </body>
 </html>
