--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <title>Pizza recipe</title>
+         <link rel="stylesheet" href="../css/style.css">
     </head>
+
+
     <body>
-        <h1>Hello World!</h1>
+        <h1>Pizza</h1>
+        <img src="../images/pizza.jpg" alt="a tatsy pizza">        
+        <h2>Description</h2>
+        <p>in order to make a great pizza, you need to follow this steps:</p>
+        <p>first you do that, and then you do this, and... you are done!</p>
+        
+        <ul>
+            <li>5 Tomatos</li>
+            <li>2 Cups of flour</li>
+            <li>1 Cup of olive oil</li>
+            <li>A little salt</li>
+        </ul>
+
+        <a href="../index.html">Home</a>
     </body>
+    
 </html>
