Add headings for ingredients and finished fallafel and pizza

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -8,6 +8,26 @@
     <body>
         <h1>Falefel</h1>
         <img src="../images/fallafel.jpg" alt="a very tatsy falafel">
+        <h2>Description</h2>
+        <p>Place the chickpea grits in a container, cover with water and soak for at least 12 hours and up to 24 hours.</p>
+        <p>Rinse the soaked grains and grind in a food processor with the cilantro, parsley, garlic and onion until you obtain a uniform puree.</p>
+        <p>Transfer to a bowl and add the remaining ingredients except the oil.</p>
+        <p>Mix and let stand for 20 minutes.</p>
+        <p>Form small balls from the mixture with your hands and set aside.</p>
+        <p>Heat oil for deep frying and fry the balls until golden brown. Remove to paper towels and serve immediately.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups dried chickpeas</li>
+            <li>5 coriander stalks</li>
+            <li>6 parsley stalks</li>
+            <li>2 medium onions, peeled and quartered</li>
+            <li>5 cloves of garlic</li>
+            <li>2 teaspoons cumin</li>
+            <li>1 teaspoon salt</li>
+            <li>Half a teaspoon of baking soda</li>
+            <li>oil for frying</li>
+        </ul>
+        
         <a href="../index.html">Home</a>
     </body>
 </html>
