--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -14,7 +14,7 @@
         <h2>Description</h2>
         <p>in order to make a great pizza, you need to follow this steps:</p>
         <p>first you do that, and then you do this, and... you are done!</p>
-        
+        <h2>Ingredients</h2>
         <ul>
             <li>5 Tomatos</li>
             <li>2 Cups of flour</li>
@@ -24,5 +24,5 @@
 
         <a href="../index.html">Home</a>
     </body>
-    
+
 </html>
