--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
+    <img src="images/book.jpg" alt="recipes book">
     <ul>
         <li>A great <a href="recipes/pizza.html">Pizza</a></li>
         <li>A yummy <a href="recipes/falafel.html">Fallafel</a></li>
