Add link to pasta page added link from home to pasta page and back in addition i added a photo of pasta

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
-<body>
+<body>s
     <h1>Odin recipes</h1>
     <img src="images/book.jpg" alt="recipes book">
     <ul>
         <li>A great <a href="recipes/pizza.html">Pizza</a></li>
         <li>A yummy <a href="recipes/falafel.html">Fallafel</a></li>
+        <li>A tasty <a href="recipes/pasta.html">Pasta</a></li>
     </ul>
 </body>
 </html>
