Add ingridients for Pasta recipe added ingridients and description for the pasta page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
-<body>s
+<body>
     <h1>Odin recipes</h1>
     <img src="images/book.jpg" alt="recipes book">
     <ul>
