--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -2,9 +2,44 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Webpage</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <title>Pasta recipe</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Pasta</h1>
+        <img src="../images/pasta.jpg" alt="Pasta">
+        <h2>Description</h2>
+
+        <p><strong>step 1</strong>
+Heat the oil in a non-stick pan over a medium-low heat.
+ Add the onion along with a generous pinch of salt and fry for 10 mins,
+ or until soft. Add the garlic and chilli, if using, and cook
+ for a further minute.</p>
+
+        <p><strong>step 2</strong>
+Stir the tomatoes, anchovies, olives and capers
+ into the onion, bring to a gentle simmer and cook, 
+ uncovered, for 15 mins. Season to taste.</p>
+
+        <p><strong>step 3</strong>
+Meanwhile, bring a large pan of salted water
+ to the boil. Cook the spaghetti following pack
+ instructions, then drain and toss with the sauce and parsley.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 tbsp olive oil</li>
+            <li>1 onion</li>
+            <li>2 large garlic cloves</li>
+            <li>½ tsp chilli flakes</li>
+            <li>400g can chopped tomatoes</li>
+            <li>5 anchovy</li>
+            <li>120g pitted black olives</li>
+            <li>2 tbsp capers</li>
+            <li>300g dried spaghetti</li>
+            <li>½ small bunch of parsley</li>
+        </ul>
+
+        <a href="../index.html">Home</a>
     </body>
 </html>
